<resources>
    <string name="app_name">YourRemedies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">YourRemedies</string>
    <string name="nav_header_subtitle">Jessi Solutions Mobile</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_all_meds">Todos os Remédios</string>
    <string name="menu_controlled_meds">Remédios Com Tarja</string>
    <string name="menu_not_controlled_meds">Remédios Sem Tarja</string>
    <string name="classification">Classificação:</string>
    <string name="radio_controlled">Com Tarja</string>
    <string name="radio_not_controlled">Sem Tarja</string>
    <string name="name_remedy">Nome do Remédio</string>
</resources>